# AccessBlocker

./: LICENSE  README.md  meson.build
src/: accessblocker.cpp  installer.c  uninstaller.c
